kubernetes/dizal-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dizal-web
spec:
  selector:
    app: dizal-web
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
