kubernetes/dizal-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dizal-web-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: dzl.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dizal-web
                port:
                  number: 80
    - host: app.lab01.dzl.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dizal-web
                port:
                  number: 80
  tls:
    - hosts:
        - app.lab01.dzl.ro
      secretName: lab01-wildcard-tls
